Implement Azure deployment script, update Docker configurations, and enhance frontend environment handling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A demo showcasing containerized React + FastAPI integration" />
     <meta name="keywords" content="React, FastAPI, Docker, TypeScript, Python, Demo" />
     <title>React + FastAPI Docker Demo</title>
+    <script src="/env.js"></script>
   </head>
   <body>
     <div id="root"></div>
